--- a/pages/pages/styles/globals.css
+++ b/pages/pages/styles/globals.css
@@ -1,4 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Optional: Apple-Vibes */
 body {
-  margin: 0;
-  font-family: sans-serif;
+  @apply bg-white text-slate-900 antialiased;
 }
